xidl-parser/tests/snapshots/test_include__hir__include_nested.snap
---
source: xidl-parser/tests/test-include.rs
expression: hir
---
Specification(
    [
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "Start",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "Middle",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "Leaf",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "End",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
)
