xidl-parser/tests/snapshots/test_include__hir__include_ordered.snap
---
source: xidl-parser/tests/test-include.rs
expression: hir
---
Specification(
    [
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "Before",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "Shared",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeDcl(
            ConstrTypeDcl(
                StructDcl(
                    StructDcl {
                        annotations: [],
                        ident: "After",
                        parent: [],
                        member: [
                            Member {
                                annotations: [],
                                ty: IntegerType(
                                    I32,
                                ),
                                ident: [
                                    SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                ],
                                default: None,
                                field_id: Some(
                                    1,
                                ),
                                recursive: false,
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
)
